Add address form user interface

--- a/index.html
+++ b/index.html
@@ -22,6 +22,24 @@
               <label for="new-last-name">Last name</label>
               <input type="text" class="form-control" id="new-last-name">
             </div> <!-- class form-group -->
+            <div id="new-addresses">
+              <div class="new-address">
+                <div class="form-group">
+                  <label for="new-street">Street</label>
+                  <input type="text" class="form-control new-street">
+                </div> <!-- class form-group -->
+                <div class="form-group">
+                  <label for="new-city">City</label>
+                  <input class="form-control new-city">
+                </div> <!-- class form-group -->
+                <div class="form-group">
+                  <label for="new-state">State</label>
+                  <input class="form-control new-state">
+                </div> <!-- class form-group -->
+              </div> <!-- class new-address -->
+            </div> <!-- id new-addresses -->
+            <span class="btn btn-primary" id="add-address">Another address</span>
+
             <button type="submit" class="btn">Add</button>
           </form>
           <h2>Contacts:</h2>
@@ -33,6 +51,10 @@
             <h2></h2>
             <p>First name: <span class="first-name"></span></p>
             <p>Last name: <span class="last-name"></span></p>
+            <p>Addresses:</p>
+            <ul id="addresses">
+
+            </ul>
           </div> <!-- id show-contact -->
         </div> <!-- class col-md-6 -->
       </div> <!-- class row -->
