Add address type functionality

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
                   <label for="new-state">State</label>
                   <input class="form-control new-state">
                 </div> <!-- class form-group -->
+                <div class="form-group">
+                  <label for="address-type">Address Type</label><br>
+                  <input type="radio" name="radAddress" class="address-type" value="Home"> Home<br>
+                  <input type="radio" name="radAddress" class="address-type" value="Work"> Work<br>
+                  <input type="radio" name="radAddress" class="address-type" value="Other"> Other<br>
+                </div><!-- class form-group -->
               </div> <!-- class new-address -->
             </div> <!-- id new-addresses -->
             <span class="btn btn-primary" id="add-address">Another address</span>
